=Integrated emergency sidebar and users activate and block functionalities

--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -10239,6 +10239,16 @@ body.fixed-header .header {
   border-radius: 50%;
 }
 
+.side-unread {
+  position: absolute;
+  top: .75rem;
+  right: 2.2rem;
+  background: #cd201f;
+  width: .5rem;
+  height: .5rem;
+  border-radius: 50%;
+}
+
 .navbar-brand {
   color: inherit;
   margin-right: 1rem;
